--- a/leshan-client-demo/pom.xml
+++ b/leshan-client-demo/pom.xml
@@ -29,6 +29,11 @@ Contributors:
 
     <dependencies>
         <dependency>
+            <groupId>org.rxtx</groupId>
+            <artifactId>rxtx</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.leshan</groupId>
             <artifactId>leshan-client-cf</artifactId>
         </dependency>
